feat: Swagger added for Notes Api
